--- a/src/components/header/nav/style.module.scss
+++ b/src/components/header/nav/style.module.scss
@@ -1,17 +1,29 @@
 .nav {
   overflow: hidden;
+  position: relative;
+  padding: 0 20px;
 
   .wrapper {
     position: relative;
     display: flex;
-    gap: 50px;
-    margin-bottom: 12px; // prev 80px
+    gap: 30px;
+    margin-bottom: 12px;
   }
 
   .container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .nav {
+    padding: 0 40px;
+
+    .wrapper {
+      gap: 50px;
+    }
   }
 }
 
